<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageButtonFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="40dp">


            <TextView
                android:id="@+id/imageButton_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:accessibilityHeading="true"
                android:text="@string/image_buttons"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/imageButton_Description1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Description1_imageButton" />
            <TextView
                android:id="@+id/imageButton_Description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Description2_imageButton" />


            <TextView
                android:id="@+id/imageButton_Question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/question1_imageButton"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:background="@drawable/button_selector"
                android:src="@drawable/ic_baseline_question_mark_24" />

            <TextView
                android:id="@+id/imageButton_Question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/question2_imageButton"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_selector"
                android:contentDescription="@string/contentDescription_imageButton"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_question_mark_24" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reset_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_selector"
                android:focusable="true"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="2dp"
                android:textAllCaps="false"
                android:text="@string/reset_questions"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>