<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="?colorSecondary"
    tools:context=".graphics.GraphicsFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_heading_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/language_of_parts"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_description_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/description_language"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/text_view_heading_incorrect_implementation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/heading_incorrect_implementation"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_incorrect_example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/incorrect_example"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/text_view_heading_correct_example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/heading_correct_example"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_correct_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="El objetivo de este criterio de éxito es garantizar que los agentes de usuario puedan presentar correctamente contenidos escritos en varios idiomas."
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>